Package_Tools/glib/package/gio/gfileinfo.inc


function g_file_info_get_type: TGType; cdecl; external libgio2;
function g_file_info_new: PGFileInfo; cdecl; external libgio2;
function g_file_info_dup(other: PGFileInfo): PGFileInfo; cdecl; external libgio2;
procedure g_file_info_copy_into(src_info: PGFileInfo; dest_info: PGFileInfo); cdecl; external libgio2;
function g_file_info_has_attribute(info: PGFileInfo; attribute: PChar): Tgboolean; cdecl; external libgio2;
function g_file_info_has_namespace(info: PGFileInfo; name_space: PChar): Tgboolean; cdecl; external libgio2;
function g_file_info_list_attributes(info: PGFileInfo; name_space: PChar): PPChar; cdecl; external libgio2;
function g_file_info_get_attribute_data(info: PGFileInfo; attribute: PChar; _type: PGFileAttributeType; value_pp: Pgpointer; status: PGFileAttributeStatus): Tgboolean; cdecl; external libgio2;
function g_file_info_get_attribute_type(info: PGFileInfo; attribute: PChar): TGFileAttributeType; cdecl; external libgio2;
procedure g_file_info_remove_attribute(info: PGFileInfo; attribute: PChar); cdecl; external libgio2;
function g_file_info_get_attribute_status(info: PGFileInfo; attribute: PChar): TGFileAttributeStatus; cdecl; external libgio2;
function g_file_info_set_attribute_status(info: PGFileInfo; attribute: PChar; status: TGFileAttributeStatus): Tgboolean; cdecl; external libgio2;
function g_file_info_get_attribute_as_string(info: PGFileInfo; attribute: PChar): PChar; cdecl; external libgio2;
function g_file_info_get_attribute_string(info: PGFileInfo; attribute: PChar): PChar; cdecl; external libgio2;
function g_file_info_get_attribute_byte_string(info: PGFileInfo; attribute: PChar): PChar; cdecl; external libgio2;
function g_file_info_get_attribute_boolean(info: PGFileInfo; attribute: PChar): Tgboolean; cdecl; external libgio2;
function g_file_info_get_attribute_uint32(info: PGFileInfo; attribute: PChar): Tguint32; cdecl; external libgio2;
function g_file_info_get_attribute_int32(info: PGFileInfo; attribute: PChar): Tgint32; cdecl; external libgio2;
function g_file_info_get_attribute_uint64(info: PGFileInfo; attribute: PChar): Tguint64; cdecl; external libgio2;
function g_file_info_get_attribute_int64(info: PGFileInfo; attribute: PChar): Tgint64; cdecl; external libgio2;
function g_file_info_get_attribute_object(info: PGFileInfo; attribute: PChar): PGObject; cdecl; external libgio2;
function g_file_info_get_attribute_stringv(info: PGFileInfo; attribute: PChar): PPChar; cdecl; external libgio2;
function g_file_info_get_attribute_file_path(info: PGFileInfo; attribute: PChar): PChar; cdecl; external libgio2;
procedure g_file_info_set_attribute(info: PGFileInfo; attribute: PChar; _type: TGFileAttributeType; value_p: Tgpointer); cdecl; external libgio2;
procedure g_file_info_set_attribute_string(info: PGFileInfo; attribute: PChar; attr_value: PChar); cdecl; external libgio2;
procedure g_file_info_set_attribute_byte_string(info: PGFileInfo; attribute: PChar; attr_value: PChar); cdecl; external libgio2;
procedure g_file_info_set_attribute_boolean(info: PGFileInfo; attribute: PChar; attr_value: Tgboolean); cdecl; external libgio2;
procedure g_file_info_set_attribute_uint32(info: PGFileInfo; attribute: PChar; attr_value: Tguint32); cdecl; external libgio2;
procedure g_file_info_set_attribute_int32(info: PGFileInfo; attribute: PChar; attr_value: Tgint32); cdecl; external libgio2;
procedure g_file_info_set_attribute_uint64(info: PGFileInfo; attribute: PChar; attr_value: Tguint64); cdecl; external libgio2;
procedure g_file_info_set_attribute_int64(info: PGFileInfo; attribute: PChar; attr_value: Tgint64); cdecl; external libgio2;
procedure g_file_info_set_attribute_object(info: PGFileInfo; attribute: PChar; attr_value: PGObject); cdecl; external libgio2;
procedure g_file_info_set_attribute_stringv(info: PGFileInfo; attribute: PChar; attr_value: PPchar); cdecl; external libgio2;
procedure g_file_info_set_attribute_file_path(info: PGFileInfo; attribute: PChar; attr_value: PChar); cdecl; external libgio2;
procedure g_file_info_clear_status(info: PGFileInfo); cdecl; external libgio2;
function g_file_info_get_deletion_date(info: PGFileInfo): PGDateTime; cdecl; external libgio2;
function g_file_info_get_file_type(info: PGFileInfo): TGFileType; cdecl; external libgio2;
function g_file_info_get_is_hidden(info: PGFileInfo): Tgboolean; cdecl; external libgio2;
function g_file_info_get_is_backup(info: PGFileInfo): Tgboolean; cdecl; external libgio2;
function g_file_info_get_is_symlink(info: PGFileInfo): Tgboolean; cdecl; external libgio2;
function g_file_info_get_name(info: PGFileInfo): PChar; cdecl; external libgio2;
function g_file_info_get_display_name(info: PGFileInfo): PChar; cdecl; external libgio2;
function g_file_info_get_edit_name(info: PGFileInfo): PChar; cdecl; external libgio2;
function g_file_info_get_icon(info: PGFileInfo): PGIcon; cdecl; external libgio2;
function g_file_info_get_symbolic_icon(info: PGFileInfo): PGIcon; cdecl; external libgio2;
function g_file_info_get_content_type(info: PGFileInfo): PChar; cdecl; external libgio2;
function g_file_info_get_size(info: PGFileInfo): Tgoffset; cdecl; external libgio2;
procedure g_file_info_get_modification_time(info: PGFileInfo; Result: PGTimeVal); cdecl; external libgio2;
function g_file_info_get_modification_date_time(info: PGFileInfo): PGDateTime; cdecl; external libgio2;
function g_file_info_get_access_date_time(info: PGFileInfo): PGDateTime; cdecl; external libgio2;
function g_file_info_get_creation_date_time(info: PGFileInfo): PGDateTime; cdecl; external libgio2;
function g_file_info_get_symlink_target(info: PGFileInfo): PChar; cdecl; external libgio2;
function g_file_info_get_etag(info: PGFileInfo): PChar; cdecl; external libgio2;
function g_file_info_get_sort_order(info: PGFileInfo): Tgint32; cdecl; external libgio2;
procedure g_file_info_set_attribute_mask(info: PGFileInfo; mask: PGFileAttributeMatcher); cdecl; external libgio2;
procedure g_file_info_unset_attribute_mask(info: PGFileInfo); cdecl; external libgio2;
procedure g_file_info_set_file_type(info: PGFileInfo; _type: TGFileType); cdecl; external libgio2;
procedure g_file_info_set_is_hidden(info: PGFileInfo; is_hidden: Tgboolean); cdecl; external libgio2;
procedure g_file_info_set_is_symlink(info: PGFileInfo; is_symlink: Tgboolean); cdecl; external libgio2;
procedure g_file_info_set_name(info: PGFileInfo; Name: PChar); cdecl; external libgio2;
procedure g_file_info_set_display_name(info: PGFileInfo; display_name: PChar); cdecl; external libgio2;
procedure g_file_info_set_edit_name(info: PGFileInfo; edit_name: PChar); cdecl; external libgio2;
procedure g_file_info_set_icon(info: PGFileInfo; icon: PGIcon); cdecl; external libgio2;
procedure g_file_info_set_symbolic_icon(info: PGFileInfo; icon: PGIcon); cdecl; external libgio2;
procedure g_file_info_set_content_type(info: PGFileInfo; content_type: PChar); cdecl; external libgio2;
procedure g_file_info_set_size(info: PGFileInfo; size: Tgoffset); cdecl; external libgio2;
procedure g_file_info_set_modification_time(info: PGFileInfo; mtime: PGTimeVal); cdecl; external libgio2;
procedure g_file_info_set_modification_date_time(info: PGFileInfo; mtime: PGDateTime); cdecl; external libgio2;
procedure g_file_info_set_access_date_time(info: PGFileInfo; atime: PGDateTime); cdecl; external libgio2;
procedure g_file_info_set_creation_date_time(info: PGFileInfo; creation_time: PGDateTime); cdecl; external libgio2;
procedure g_file_info_set_symlink_target(info: PGFileInfo; symlink_target: PChar); cdecl; external libgio2;
procedure g_file_info_set_sort_order(info: PGFileInfo; sort_order: Tgint32); cdecl; external libgio2;

function g_file_attribute_matcher_get_type: TGType; cdecl; external libgio2;
function g_file_attribute_matcher_new(attributes: PChar): PGFileAttributeMatcher; cdecl; external libgio2;
function g_file_attribute_matcher_ref(matcher: PGFileAttributeMatcher): PGFileAttributeMatcher; cdecl; external libgio2;
procedure g_file_attribute_matcher_unref(matcher: PGFileAttributeMatcher); cdecl; external libgio2;
function g_file_attribute_matcher_subtract(matcher: PGFileAttributeMatcher; subtract: PGFileAttributeMatcher): PGFileAttributeMatcher; cdecl; external libgio2;
function g_file_attribute_matcher_matches(matcher: PGFileAttributeMatcher; attribute: PChar): Tgboolean; cdecl; external libgio2;
function g_file_attribute_matcher_matches_only(matcher: PGFileAttributeMatcher; attribute: PChar): Tgboolean; cdecl; external libgio2;
function g_file_attribute_matcher_enumerate_namespace(matcher: PGFileAttributeMatcher; ns: PChar): Tgboolean; cdecl; external libgio2;
function g_file_attribute_matcher_enumerate_next(matcher: PGFileAttributeMatcher): PChar; cdecl; external libgio2;
function g_file_attribute_matcher_to_string(matcher: PGFileAttributeMatcher): PChar; cdecl; external libgio2;

function G_TYPE_FILE_ATTRIBUTE_MATCHER: TGType;

// === Konventiert am: 18-8-24 16:49:03 ===

function G_TYPE_FILE_INFO: TGType;
function G_FILE_INFO(obj: Pointer): PGFileInfo;
function G_FILE_INFO_CLASS(klass: Pointer): PGFileInfoClass;
function G_IS_FILE_INFO(obj: Pointer): Tgboolean;
function G_IS_FILE_INFO_CLASS(klass: Pointer): Tgboolean;
function G_FILE_INFO_GET_CLASS(obj: Pointer): PGFileInfoClass;

{$ENDIF read_interface}


{$IFDEF read_implementation}

function G_TYPE_FILE_INFO: TGType;
begin
  G_TYPE_FILE_INFO := g_file_info_get_type;
end;

function G_FILE_INFO(obj: Pointer): PGFileInfo;
begin
  Result := PGFileInfo(g_type_check_instance_cast(obj, G_TYPE_FILE_INFO));
end;

function G_FILE_INFO_CLASS(klass: Pointer): PGFileInfoClass;
begin
  Result := PGFileInfoClass(g_type_check_class_cast(klass, G_TYPE_FILE_INFO));
end;

function G_IS_FILE_INFO(obj: Pointer): Tgboolean;
begin
  Result := g_type_check_instance_is_a(obj, G_TYPE_FILE_INFO);
end;

function G_IS_FILE_INFO_CLASS(klass: Pointer): Tgboolean;
begin
  Result := g_type_check_class_is_a(klass, G_TYPE_FILE_INFO);
end;

function G_FILE_INFO_GET_CLASS(obj: Pointer): PGFileInfoClass;
begin
  Result := PGFileInfoClass(PGTypeInstance(obj)^.g_class);
end;


{ was #define dname def_expr }
function G_TYPE_FILE_ATTRIBUTE_MATCHER: TGType; { return type might be wrong }
begin
  G_TYPE_FILE_ATTRIBUTE_MATCHER := g_file_attribute_matcher_get_type;
end;


{$ENDIF read_implementation}
